# rocoarena

./: .clang-format  .gitmodules  DEVLOG.md  LICENSE  README.md  readme.md
Refs/: attrAdvantage.csv  attrAdvantage.xlsx
arena/: CMakeLists.txt
arena/assets/pets/: pets.db
arena/assets/skills/scripts/: 0001_撞击.lua  0002_火焰拳.lua  0004_十万伏特.lua  0005_催眠术.lua  0007_龙之波动.lua  0009_守住.lua  0010_剑舞.lua  _api.lua
arena/assets/skills/skills_src/: 0001_撞击.json  0002_火焰拳.json  0003_水炮.json  0004_十万伏特.json  0005_催眠术.json  0006_影子球.json  0007_龙之波动.json  0008_神速.json  0009_守住.json  0010_剑舞.json
arena/docs/en/: test.md
arena/docs/ideas/: 2025-10-19.md
arena/docs/zh/: battle.md  tools.md
arena/docs/zh/ideas/: 2025-12-11.md
arena/src/: CMakeLists.txt  forward.h  main.cpp
arena/src/battle/: Action.cpp  Action.h  BattleSystem.cpp  BattleSystem.h  Buff.cpp  Buff.h  SkillAction.cpp  SkillAction.h
arena/src/core/: forward.h
arena/src/core/database/: database.cpp  database.h
arena/src/core/json_loader/: json_loader.cpp  json_loader.h
arena/src/core/logger/: logger.h
arena/src/core/rng/: rng.h
arena/src/core/scripter/: scripter.cpp  scripter.h
arena/src/entity/: Attr.h  EVData.h  IVData.h  Nature.h  Pet.cpp  Pet.h  Player.cpp  Player.h  RealStatus.h  Species.h  Stat.h  testPart.cpp  testpart
arena/src/skill/: SkillBase.h  SkillPool.cpp  SkillPool.h  SkillRegistry.cpp  SkillRegistry.h
arena/src/startup/: battle_session.cpp  battle_session.h  cli_helpers.cpp  cli_helpers.h  client.cpp  client.h  data_loader.cpp  data_loader.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  local_battle.cpp  local_battle.h  server.cpp  server.h
arena/src/tools/: .gitignore  demo.py  diff_exporter.py  hash_utils.py  pet_importer.py  pet_skills.csv  pets.csv  skill_importer.py  skill_validator.py  test_data.csv  test_tools.py  tools.md
arena/src/tools/demo_output/: 000001_撞击.json  000002_火焰拳.json  000003_水炮.json  000004_十万伏特.json  000005_催眠术.json  000006_影子球.json  000007_龙之波动.json  000008_神速.json  000009_守住.json  000010_剑舞.json
arena/src/tools/test_output/: chinese.csv  small.csv  template.csv
arena/src/tools/test_output/chinese_import/: 000100_中文测试.json
arena/src/tools/test_output/csv_import/: 000001_撞击.json  000002_火焰拳.json  000003_水炮.json  000004_十万伏特.json  000005_催眠术.json  000006_影子球.json  000007_龙之波动.json  000008_神速.json  000009_守住.json  000010_剑舞.json
arena/src/tools/test_output/full_workflow/: 000001_撞击.json  000002_火焰拳.json  000003_水炮.json  000004_十万伏特.json  000005_催眠术.json  000006_影子球.json  000007_龙之波动.json  000008_神速.json  000009_守住.json  000010_剑舞.json
arena/src/tools/test_output/new_skills/: 000001_技能A.json  000002_技能B.json  000004_技能D.json
arena/src/tools/test_output/old_skills/: 000001_技能A.json  000003_技能C.json
arena/src/tools/test_output/size_test/: 000001_测试.json
arena/tests/: CMakeLists.txt  README.md  build.md  config.hpp.in  dummy_test.cpp
arena/tests/battle/: battle_system_test.cpp  buff_endturn_test.cpp  buff_test.cpp
arena/tests/core/: asset_consistency_test.cpp  scripter_test.cpp  testJSON.cpp  testLua.cpp
arena/tests/entity/: attr_chart_test.cpp  pet_damage_test.cpp  pet_stat_test.cpp  testEntity.cpp
arena/tests/perf/: battle_throughput_bench.cpp  lua_execution_bench.cpp  stat_calc_bench.cpp
arena/tests/regression/: golden_regression_test.cpp
arena/tests/session/: session_state_test.cpp
arena/tests/stress/: concurrent_sessions.cpp  long_round_soak.cpp
cxx/arena/: CMakeLists.txt
cxx/arena/battle/: Action.h  BattleSystem.h  Forward.h
cxx/arena/data/skills/: test.lua
cxx/arena/entity/: Attr.h  BasicStatus.h  EVData.h  IVData.h  Pet.cpp  Pet.h  RealStatus.h  SPecies.cpp  Skill.h  Species.h  testPart.cpp  testpart
cxx/arena/ideas/: 2025-10-18.md
cxx/arena/test/: testJSON.cpp  testLua.cpp
cxx/arena/test/testcases/: test.json
cxx/arena/utils/: Database.cpp  Database.h  Forward.h  init.sh
cxx/arena/utils/JSONLoader/: JSONLoader.cpp
cxx/arena/utils/Scripter/: Scripter.cpp  Scripter.h
docs/test/: test.md
refs/: attrAdvantageNum.csv  getResources.md  关于洛克王国暴击机制的进一步分析（暴击值与暴击概率关系的定量探究）.md
